@@ -17,6 +17,8 @@ import java.util.stream.Collectors;
 
 @Service
 public class RetailService {
+    public static final String RETAIL_USER_NOT_FOUND = "User is not a retail user";
+    public static final String ADMIN = "admin";
     private final BillRepository billRepository;
     private final UsersRepo userRepository;
     public RetailService(BillRepository billRepository, UsersRepo userRepository) {
@@ -26,34 +28,34 @@ public class RetailService {
     public List<PaymentHistoryDTO> getPaymentHistory(String username) {
         // Fetch the logged-in user
         Users user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("User is not a retail user"));
+                .orElseThrow(() -> new IllegalArgumentException(RETAIL_USER_NOT_FOUND));
         // Check if the logged-in user is an admin
-        if ("admin".equalsIgnoreCase(user.getUsername())) {
+        if (ADMIN.equalsIgnoreCase(user.getUsername())) {
             // Admin: Fetch all users' payment history
             List<Bill> allBills = billRepository.findAll();
             return allBills.stream()
                     .map(bill -> new PaymentHistoryDTO(
                             bill.getDate(),
-                            bill.getItems().stream()
+                            bill.getBillItems().stream()
                                     .map(BillItem::getDescription)
                                     .collect(Collectors.joining(", ")),
                             returnPaymentStatus(bill),
                             bill.getTotalAmount()
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             // Regular user: Fetch only their payment history
-            List<Bill> userBills = billRepository.findByUser(user); // Assuming this method exists
+            List<Bill> userBills = billRepository.findBillByUser(user); // Assuming this method exists
             return userBills.stream()
                     .map(bill -> new PaymentHistoryDTO(
                             bill.getDate(),
-                            bill.getItems().stream()
+                            bill.getBillItems().stream()
                                     .map(BillItem::getDescription)
                                     .collect(Collectors.joining(", ")),
                             returnPaymentStatus(bill),
                             bill.getTotalAmount()
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
     private String returnPaymentStatus(Bill bill) {
@@ -66,32 +68,32 @@ public class RetailService {
     public List<PurchaseHistoryDTO> getPurchaseHistory(String username) {
         // Fetch the logged-in user
         Users user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("User is not a retail user"));
+                .orElseThrow(() -> new IllegalArgumentException(RETAIL_USER_NOT_FOUND));
         // Check if the logged-in user is an admin
-        if ("admin".equalsIgnoreCase(user.getUsername())) {
+        if (ADMIN.equalsIgnoreCase(user.getUsername())) {
             // Admin: Fetch all users' purchase history
             List<Bill> allBills = billRepository.findAll();
             return allBills.stream()
-                    .flatMap(bill -> bill.getItems().stream()
+                    .flatMap(bill -> bill.getBillItems().stream()
                             .map(item -> new PurchaseHistoryDTO(
                                     bill.getDate(),
                                     item.getDescription(),
                                     item.getQuantity(),
                                     item.getQuantity() * item.getUnitPrice()
                             )))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             // Regular user: Fetch only their purchase history
-            List<Bill> userBills = billRepository.findByUser(user); // Assuming this method exists
+            List<Bill> userBills = billRepository.findBillByUser(user); // Assuming this method exists
             return userBills.stream()
-                    .flatMap(bill -> bill.getItems().stream()
+                    .flatMap(bill -> bill.getBillItems().stream()
                             .map(item -> new PurchaseHistoryDTO(
                                     bill.getDate(),
                                     item.getDescription(),
                                     item.getQuantity(),
                                     item.getQuantity() * item.getUnitPrice()
                             )))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
     // IncompleteTransaction
@@ -99,47 +101,43 @@ public class RetailService {
         // Fetch the logged-in user to check their role
         Optional<Users> retailUser = userRepository.findByUsername(username);
         if (retailUser.isEmpty()) {
-            throw new IllegalArgumentException("User is not a retail user");
+            throw new IllegalArgumentException(RETAIL_USER_NOT_FOUND);
         }
         Users user = retailUser.get();
         // Check if the logged-in user is an admin
-        if ("admin".equalsIgnoreCase(user.getUsername())) {
+        if (ADMIN.equalsIgnoreCase(user.getUsername())) {
             // Admin: Fetch all users' transactions
             List<Bill> allBills = billRepository.findAll();
             return allBills.stream()
                     .filter(bill -> bill.getBalance() > 0)
                     .map(bill -> new IncompleteTransactionsDTO(
                             bill.getDate(), // Directly use the date
-                            bill.getItems().stream()
+                            bill.getBillItems().stream()
                                     .map(BillItem::getDescription)
                                     .collect(Collectors.joining(", ")),
                             bill.getBalance(),
                             calculateDueDate(bill.getDate()) // Directly use the date
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             // Regular user: Fetch only their transactions
-            List<Bill> userBills = billRepository.findByUser(user); // Assuming this method exists
+            List<Bill> userBills = billRepository.findBillByUser(user); // Assuming this method exists
             return userBills.stream()
                     .filter(bill -> bill.getBalance() > 0)
                     .map(bill -> new IncompleteTransactionsDTO(
                             bill.getDate(), // Directly use the date
-                            bill.getItems().stream()
+                            bill.getBillItems().stream()
                                     .map(BillItem::getDescription)
                                     .collect(Collectors.joining(", ")),
                             bill.getBalance(),
                             calculateDueDate(bill.getDate()) // Directly use the date
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
-    private Date calculateDueDate(Date date) {
-        // Convert java.util.Date to LocalDate
-        LocalDate localDate = date.toInstant()
-                .atZone(ZoneId.systemDefault())
-                .toLocalDate();
+    private Date calculateDueDate(LocalDate date) {
         // Add 30 days
-        LocalDate dueDate = localDate.plusDays(30);
+        LocalDate dueDate = date.plusDays(30);
         // Convert back to java.util.Date
         return Date.from(dueDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
     }
